<resources>
    <string name="app_name">Money Manager</string>
    <string name="feedback_forgotpassword_title">Success</string>
    <string name="feedback_forgotpassword_message">You will receive an email with instructions on how to reset your password in a few minutes. Please check your email and follow the instructions to reset your password.</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>Transactions</item>
        <item>Wallets</item>
        <item>Categories</item>
        <item>Savings</item>
        <item>Budgets</item>
        <item>Events</item>
        <item>Fast input</item>
        <item>Visualization graphs</item>
        <item>Tools</item>
        <item>Logout</item>
    </string-array>
    <string-array name="nav_drawer_icon">
        <item>ic_activity</item>
        <item>ic_wallet</item>
        <item>ic_category</item>
        <item>ic_saving</item>
        <item>ic_budget</item>
        <item>ic_event</item>
        <item>icon_fast_input</item>
        <item>ic_graph</item>
        <item>ic_tool</item>
        <item>ic_logout</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_title">Transactions</string>
    <string name="add_transaction_title">Add transaction</string>
    <string name="wallet_title">Wallet</string>
    <string name="to_wallet">To</string>
    <string name="from_wallet">From</string>
    <string name="savings">Savings</string>
    <string name="add_wallet_title">Add wallet</string>
    <string name="add_saving_tittle">Add saving</string>
    <string name="add_budget_tittle">Add budget</string>
    <string name="add_event_tittle">Add event</string>
    <string name="detail_event_tittle">Event detail</string>
    <string name="saving_name">Saving name</string>
    <string name="detail_saving_tittle">Saving detail</string>
    <string name="detail_budget_tittle">Budget detail</string>
    <string name="edit_saving_tittle">Edit saving</string>
    <string name="edit_budget_tittle">Edit budget</string>
    <string name="edit_events_tittle">Edit event</string>
    <string name="tips_tittle">Tips</string>
    <string name="setting_tittle">Setting</string>
    <string name="done">Done</string>
    <string name="create_new">Create new</string>
    <string name="new_category">New category</string>
    <string name="add_transaction_successful">Transaction has been added successfully</string>
    <string name="input_amount">You must fill amount field</string>
    <string name="database_err">Error Establishing a Database Connection</string>
    <string name="running">Running</string>
    <string name="finish">Finish</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="wallet">Wallet</string>
    <string name="add_new">New category</string>
    <string name="add_new_category">Let\'s input your category\'s name.</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="edit">Edit</string>
    <string name="delete_confirm">Confirmation</string>
    <string name="sure_delete_category">Do you want to delete this category?</string>
    <string name="no_item">No Item Selected!</string>
    <string name="select_item">Please select a category from the list.</string>
    <string name="new_event">Event has been created successfully</string>
    <string name="new_saving">Saving has been created successfully</string>
    <string name="enter_email">Let\'s input your email</string>
    <string name="enter_password">Let\'s input your password</string>
    <string name="reset_password">Your password will reset automatically...</string>
    <string name="register_user">Authenticating...</string>
    <string name="create_account">Creating your account...</string>
    <string name="auth_fail">Could not authenticate you</string>
    <string name="successful">Successful</string>
    <string name="login_fail">Login failed!</string>
    <string name="least_3_character">At least 3 characters</string>
    <string name="enter_valid_email">Let\'s input a valid email address</string>
    <string name="password_not_match">Password doesn\'t match confirmation</string>
    <string name="budget_add_success">Budget has been created successfully</string>
    <string name="category">Categories</string>
    <string name="budgets">Budgets</string>
    <string name="saving">Saving</string>
    <string name="transfer">Transfer</string>
    <string name="events">Events</string>
    <string name="graphs">Visualization graphs</string>
    <string name="tools">Tools</string>
    <string name="please_input_name">You must fill name field</string>
    <string name="please_input_amount">You must fill amount field</string>
    <string name="please_connect_network">Make sure network connection is enabled on your device in order to get data from server</string>
    <string name="new_wallet">New wallet</string>
    <string name="add_new_wallet_success">Wallet has been created successfully</string>
    <string name="transaction_type">Type of Transaction</string>
    <string name="enter_amount">Let\'s input amount</string>
    <string name="enter_date">Let\'s input date</string>
    <string name="select_wallet">Select wallet</string>
    <string name="enter_description">Let\'s input description</string>
    <string name="name">Name</string>
    <string name="enter_end_date">Let\'s input ending date</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="start_date">Starting date</string>
    <string name="end_date">Ending date</string>
    <string name="description">Description</string>
    <string name="spent">Spent</string>
    <string name="forgot_password">Reset Your Password </string>
    <string name="we_just_need">We\'ll send an email with instructions on how to reset your password to the email address associated with your account. If you don\'t receive this email within an hour or two, check your junk or spam folder.</string>
    <string name="email">Email</string>
    <string name="reset_password_">Reset Password</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Create one now!</string>
    <string name="goal">Goal</string>
    <string name="current_amount">Starting amount</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account_">Create an account</string>
    <string name="already_member">Already a member? Login here</string>
    <string name="account_type">Type of Account</string>
    <string name="start_money">Initial balance</string>
    <string name="note">Note</string>
    <string name="left">Left</string>
    <string name="current">Current</string>
    <string name="title_set_new_password_dialog">New password</string>
    <string name="title_confirm_password_dialog">Confirm password</string>
    <string name="title_confirm_old_password_dialog">Input your old password</string>
    <string name="input_password">Input your new password</string>
    <string name="question_set_new_password">Do you want to create a new password?</string>
    <string name="txt_info">Note</string>
    <string name="wrong_password">Wrong password</string>
    <string name="forgot_password_lockapp">Forgot pattern lock? Login here!</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="change_laguage">Select language</string>
    <string name="income_activity"> List of income transaction information</string>
    <string name="expense_activity">List of expense transaction information</string>
    <string name="saving_activity">List of saving transaction information</string>
    <string name="transfer_activity">List of tranfer transaction information</string>
    <string name="type">Type</string>
    <string name="netIncome">Net income</string>
    <string name="byTime">By time</string>
    <string name="byCategory">By category</string>
    <string name="sign_up_fail">Sign up fail</string>
    <string name="tips">Tips</string>
    <string name="usd">USD</string>
    <string name="vnd">VND</string>
    <string name="jpy">JPY</string>
    <string name="cny">CNY</string>
    <string name="eur">EUR</string>
    <string name="rud">RUB</string>
    <string name="exchange">Exchange</string>

    <string-array name="currency_array">
        <item>USD</item>
        <item>VND</item>
        <item>JPY</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>RUB</item>
    </string-array>

    <string-array name="tool_array">
        <item>Tips</item>
        <item>ATM Finder</item>
        <item>Bank Finder</item>
        <item>Exchanger</item>
        <item>Settings</item>
        <!--<item>About us</item>-->
    </string-array>
    <string-array name="tool_icon_array">
        <item>ic_tip</item>
        <item>ic_atm</item>
        <item>ic_bank_tool</item>
        <item>ic_exchanger</item>
        <item>ic_setting</item>
        <!--<item>ic_about_us</item>-->
    </string-array>

    <string name="enter_username">Enter user name</string>
    <string name="valid_name">Please input name has greater than 3 character</string>
    <string name="key">Key word</string>
    <string name="fast_input_title">Fast input</string>
    <string name="add_fastinput_successful">Fast input has been added successfully</string>
    <string name="money">Money</string>
    <string name="detail_fast_input">Fast input detail</string>
    <string name="edit_fast_input">Fast input edit</string>

    <string name="is_internet_connection">Please connect to the Internet</string>
    <string name="is_numberic">Your input is not numeric. Please try again.</string>
    <string name="his_saving">History</string>
</resources>
