<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="80dip"
            android:layout_height="50dip"
            android:src="@drawable/heart"
            android:contentDescription="@string/app_name"
            android:layout_marginRight="5dip"
            android:padding="3dip"
            />

        <TextView
            android:id="@+id/saving_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="tile"
            android:textColor="#040404"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:text="@string/left"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="left"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:text="@string/spent"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/spent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="spent"
            android:textSize="15sp"/>
    </LinearLayout>

</LinearLayout>