<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="80dip"
            android:layout_height="50dip"
            android:src="@drawable/heart"
            android:contentDescription="@string/app_name"
            android:layout_marginRight="5dip"
            android:padding="3dip"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/budgetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:text="budget"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:text="@string/end_date"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:text="date"
            android:textSize="15sp"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:text="@string/category"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:text="category"
            android:textSize="15sp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startAmount"
                android:text="0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/endAmount"
                android:text="0"
                android:layout_marginRight="20dp"
                android:gravity="right" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/horizontal_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="100dp"
            android:progress="2"
            android:progressBackgroundTint="@color/colorPrimaryDark"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp" />
    </LinearLayout>


</LinearLayout>